# idealyst-native

./: .gitignore  .mcp.json  ARCH_AUDIT.md  CLAUDE.md  Cargo.toml  DEMO_OOB_DIAGNOSIS.md  HANDOFF-drawer-header-icons.md  LEAK_REPORT.md  QUESTIONS.md  REACTIVITY_DSL_DESIGN.md  README.md  TODO.md  detail-bar.md  enc2.yml  plan.md
arena/: .gitignore  Cargo.toml  HANDOFF.md  README.md  index.html  instrument.js  spec.md
arena/agents/: README.md  preamble.md
arena/idealyst-native/: README.md  index.html
arena/idealyst-native/wasm/: Cargo.toml
arena/idealyst-native/wasm/src/: lib.rs
arena/react-cssvars/: index.html
arena/react-naive/: index.html
arena/scenarios/todo-app/: rubric.toml  scenario.toml
arena/skills/: README.md
arena/spine/: Cargo.toml
arena/spine/src/: lib.rs  metrics.rs  report.rs  rubric.rs  scenario.rs  score.rs
arena/spine/src/harness/: agent.rs  bench.rs  feedback.rs  locate.rs  mod.rs  robot_web.rs  run.rs  scaffold.rs
arena/spine/src/verify/: compile.rs  mod.rs  playwright.rs  robot.rs  static_ast.rs
arena/spine/tests/: robot_bridge.rs  robot_web.rs  scaffold_smoke.rs  static_verify.rs
arena/svelte/: index.html
arena/vanilla-classes/: index.html
arena/vanilla-css-vars/: index.html
arena/vue/: index.html
arena/web/: README.md  index.html  instrument.js
arena/web/idealyst-native/: index.html
arena/web/idealyst-native/wasm/: Cargo.toml
arena/web/react-cssvars/: index.html
arena/web/react-naive/: index.html
arena/web/suites/: rebuild.js
arena/web/vanilla-css-vars/: index.html
benchmark/: Cargo.toml  README.md  index.html  instrument.js  serve  spec.md  tree.js
benchmark/anim/: harness.js  run-headless.mjs  spec.md
benchmark/idealyst-native/: README.md  index.html
benchmark/idealyst-native-anim/: index.html
benchmark/idealyst-native-anim/wasm/: Cargo.toml
benchmark/idealyst-native-anim/wasm/src/: lib.rs
benchmark/idealyst-native/wasm/: Cargo.toml
benchmark/idealyst-native/wasm/.cargo/: config.toml
benchmark/idealyst-native/wasm/src/: lib.rs
benchmark/react-cssvars/: index.html
benchmark/react-memo/: index.html
benchmark/react-naive/: index.html
benchmark/runner/: README.md  host.html  index.mjs  package-lock.json  package.json
benchmark/src/: lib.rs
benchmark/suites/: anim-bounce.js  anim-nbody.js  anim-springstorm.js  granular.js  hierarchy.js  reactive-style.js  rebuild.js  signal-class.js  toggle.js
benchmark/svelte/: index.html  package-lock.json  package.json  vite.config.js
benchmark/svelte/src/: App.svelte  Branch.svelte  Leaf.svelte  main.js  state.svelte.js
benchmark/vanilla-anim/: index.html
benchmark/vanilla-classes/: index.html
benchmark/vanilla-classes-bulk/: index.html
benchmark/vanilla-css-vars/: index.html
benchmark/vue/: index.html
crates/backend-android/: Cargo.toml  README.md
crates/backend-android/src/: lib.rs  stub.rs
crates/backend-android/src/imp/: animation.rs  callbacks.rs  helpers.rs  jni_exports.rs  mod.rs  style.rs
crates/backend-ios/: Cargo.toml
crates/backend-ios/src/: lib.rs  stub.rs
crates/backend-ios/src/imp/: callbacks.rs  mod.rs  navigator.rs  overlay.rs  style.rs  tab_drawer.rs
crates/backend-web/: Cargo.toml
crates/backend-web/runtime/js/: virtualizer.js
crates/backend-web/src/: defaults.rs  lib.rs  style.rs
crates/backend-web/src/primitives/: button.rs  image.rs  (+12 more)
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: dev_config.rs  framework_source.rs  main.rs  platform.rs
crates/framework-core/: Cargo.toml
crates/framework-core/src/: backend.rs  builder.rs  debug.rs  handles.rs  lib.rs  primitive.rs  reactive.rs  sources.rs  style.rs  walker.rs
crates/framework-macros/: Cargo.toml
crates/framework-macros/src/: invocation_macro.rs  jsx.rs  lib.rs  methods_block.rs  reactivity.rs  stylesheet.rs  ui.rs
crates/icons-lucide/: Cargo.toml
crates/icons-lucide/src/: lib.rs
crates/idealyst-dev-client/: Cargo.toml
crates/idealyst-dev-client/src/: convert.rs  lib.rs  navigators.rs  transport.rs  transport_web.rs
crates/idealyst-dev-server/: Cargo.toml
crates/idealyst-dev-server/examples/: dump_wire.rs
crates/idealyst-dev-server/src/: convert_out.rs  lib.rs  transport.rs  watch.rs
crates/idealyst-wire/: Cargo.toml
crates/idealyst-wire/src/: lib.rs
crates/idealyst-wire/tests/: roundtrip.rs  transport.rs
examples/animation-test/: Cargo.toml  index.html
examples/animation-test/src/: lib.rs  web.rs
examples/camera-demo/: Cargo.toml  index.html
examples/camera-demo/src/: lib.rs
examples/camera-preview-demo/: Cargo.toml  index.html
examples/camera-preview-demo/src/: lib.rs
examples/canvas-demo/: Cargo.toml  index.html
examples/canvas-demo/src/: lib.rs
examples/conformance/: Cargo.toml
examples/conformance/src/: lib.rs  screens.rs  suites.rs
examples/contact-form-lambda/: Cargo.toml  README.md  template.yaml
examples/contact-form-lambda/src/: lib.rs
examples/container-demo/: Cargo.toml
examples/container-demo/src/: lib.rs
examples/denoise-demo/: Cargo.toml
examples/denoise-demo/src/: lib.rs
examples/dnd-demo/: Cargo.toml
examples/dnd-demo/src/: lib.rs
examples/docs-macro/: Cargo.toml
examples/docs-macro/src/: emit.rs  lib.rs  parse.rs
examples/esp32-ili9341/: Cargo.toml  README.md  build.rs  diagram.json  rust-toolchain.toml  sdkconfig.defaults  wokwi.toml
examples/esp32-ili9341/.cargo/: config.toml
examples/esp32-ili9341/src/: main.rs
examples/external-export-demo/: Cargo.toml
examples/external-export-demo/src/: lib.rs
examples/external-export-suite/: Cargo.toml  README.md
examples/external-export-suite/consumers/: README.md
examples/external-export-suite/src/: lib.rs
examples/fiddle/: .gitignore  Cargo.toml  README.md
examples/fiddle/src/: compile.rs  main.rs  server.rs
examples/fiddle/template/: Cargo.toml
examples/fiddle/webapp/: Cargo.toml  index.html
examples/file-picker-demo/: Cargo.toml
examples/file-picker-demo/src/: lib.rs
examples/graphql-demo/: Cargo.toml  index.html  operations.graphql  schema.graphql
examples/graphql-demo/src/: lib.rs
(+2438 files in other folders)
