[workspace]
resolver = "2"
members = [
    # Runtime — platform-agnostic upper half (above the Backend Interface).
    "crates/runtime/core",
    "crates/runtime/macros",
    "crates/runtime/reactive/arena",
    "crates/runtime/reactive/refs",
    "crates/runtime/layout",

    # Shared StyleRules → CSS conversion (used by web + ssr backends).
    "crates/css",

    # Native backends — implement Backend on top of a platform's UI toolkit.
    "crates/backend/apple/core",
    "crates/backend/macos",
    "crates/backend/ios/core",
    "crates/backend/ios/mobile",
    "crates/backend/ios/tv",
    "crates/backend/ios-stack",
    "crates/backend/android/core",
    "crates/backend/android/mobile",
    "crates/backend/android/tv",
    "crates/backend/roku",
    "crates/backend/roku/macros",
    "crates/backend/roku/transpile",
    "crates/backend/terminal",
    "crates/backend/cpu",
    "crates/backend/web",
    "crates/backend/ssr",
    "crates/backend/windows",
    "crates/backend/linux",
    "crates/backend/posix-log-capture",

    # GPU Backend — composed of Host + Painter + Engine.
    "crates/gpu-backend/api",
    "crates/gpu-backend/engine",
    "crates/gpu-backend/host/winit",
    "crates/gpu-backend/host/web",
    "crates/gpu-backend/host/appkit",
    "crates/gpu-backend/host/terminal",
    "crates/gpu-backend/host/wgpu-accesskit",
    "crates/gpu-backend/painter/ios-sim",
    "crates/gpu-backend/painter/android-sim",
    "crates/gpu-backend/variant/phone",
    "crates/gpu-backend/variant/tablet",
    "crates/gpu-backend/variant/tv",

    # Dev mode — wire protocol, hot reload, dev server, app-side replayer.
    "crates/dev/wire",
    "crates/dev/hot",
    "crates/dev/client",
    "crates/dev/server",
    "crates/dev/http",
    "crates/dev/reload",
    "crates/dev/web-host",
    "crates/dev/runtime-server-shell",

    # MCP — project-aware catalog, stdio server, robot proxy.
    "crates/mcp/catalog",
    "crates/mcp/server",
    "crates/mcp/robot-proxy",

    # UI — component library + extras.
    "crates/ui/idea-theme",
    "crates/ui/idea-ui",
    "crates/ui/idea-ui-docs-derive",
    "crates/ui/icons-lucide",

    # SDK — third-party extension primitives (Primitive::External).
    "crates/sdk/maps-core",
    "crates/sdk/maps",
    "crates/sdk/maps-web",
    "crates/sdk/maps-ios",
    "crates/sdk/idea-codeblock",
    "crates/sdk/webview",
    "crates/sdk/video",
    "crates/sdk/svg",
    "crates/sdk/toolbar",
    "crates/sdk/form",
    "crates/sdk/menu",

    # SDK — utility (non-primitive) crates.
    "crates/sdk/net",
    "crates/sdk/server",
    "crates/sdk/server-macros",

    # SDK — navigator-kind extensions (Primitive::NavigatorExt).
    "crates/sdk/stack-navigator",
    "crates/sdk/tab-navigator",
    "crates/sdk/drawer-navigator",
    "crates/sdk/web-navigator-helpers",
    "crates/sdk/ios-navigator-helpers",
    "crates/sdk/android-navigator-helpers",

    # Tools — CLI + per-platform build/run + source porters.
    "crates/tools/cli",
    # wasm-split toolchain (vendored from DioxusLabs/dioxus alpha-0.8.0
    # — we own the snapshot, fix bugs as they fire on our codebase).
    # See `crates/tools/wasm-split/README.md`.
    "crates/tools/wasm-split/wasm-split",
    "crates/tools/wasm-split/wasm-split-cli",
    "crates/tools/wasm-split/wasm-split-macro",
    "crates/tools/wasm-split/wasm-used",
    "crates/tools/build/runtime-server",
    "crates/tools/build/android",
    "crates/tools/build/ios",
    "crates/tools/build/roku",
    "crates/tools/build/sim",
    "crates/tools/build/web",
    "crates/tools/build/macos",
    "crates/tools/build/terminal",
    "crates/tools/dev-tui",
    "crates/tools/run/android",
    "crates/tools/run/ios",
    "crates/tools/run/roku",
    "crates/tools/run/macos",
    "crates/tools/run/terminal",
    "crates/tools/port/core",
    "crates/tools/port/tsx",
    "crates/tools/port/react",
    "crates/tools/port/solid",
    "crates/tools/port/vue",
    "crates/tools/port/svelte",
    "crates/tools/port/project",
    "crates/tools/port/preview",
    "examples/hello-roku",
    "examples/idea-ui-docs",
    "examples/docs",
    "examples/docs-macro",
    "examples/animation-test",
    "examples/welcome",
    "examples/stack-demo",
    "examples/server-fn-demo",
    "examples/mcp-demo",
    "examples/fiddle",
    "examples/website",
    "examples/hydration-demo",
    "examples/toolbar-demo",
    "examples/menu-demo",
    "examples/reactive-loops",
    "benchmark",
    "benchmark/idealyst-native/wasm",
    "benchmark/idealyst-native-anim/wasm",
]

# Sub-crates under `examples/fiddle/` that have their own `[workspace]`
# section (template + webapp) so cargo doesn't try to merge them in.
# Listing them in `exclude` documents the intent; without it cargo
# walks the file system at `cargo check`-time and is fine either way.
exclude = [
    "examples/fiddle/template",
    "examples/fiddle/webapp",
    # ESP32-C3 firmware — target = `riscv32imc-esp-espidf`,
    # requires the espup-installed toolchain + esp-idf SDK. Lives
    # outside the host workspace entirely; see its README for the
    # standalone build flow.
    "examples/esp32-ili9341",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
runtime-core = { path = "crates/runtime/core" }
css = { path = "crates/css" }
dev-hot = { path = "crates/dev/hot" }
runtime-macros = { path = "crates/runtime/macros" }
mcp-catalog = { path = "crates/mcp/catalog" }
mcp-server = { path = "crates/mcp/server" }
docs-macro = { path = "examples/docs-macro" }
runtime-layout = { path = "crates/runtime/layout" }
wire = { path = "crates/dev/wire" }
dev-client = { path = "crates/dev/client" }
dev-server = { path = "crates/dev/server" }
dev-http = { path = "crates/dev/http" }
dev-reload = { path = "crates/dev/reload" }
web-dev-host = { path = "crates/dev/web-host" }
build-ios = { path = "crates/tools/build/ios" }
run-ios = { path = "crates/tools/run/ios" }
build-runtime-server = { path = "crates/tools/build/runtime-server" }
build-android = { path = "crates/tools/build/android" }
run-android = { path = "crates/tools/run/android" }
build-roku = { path = "crates/tools/build/roku" }
run-roku = { path = "crates/tools/run/roku" }
build-sim = { path = "crates/tools/build/sim" }
build-web = { path = "crates/tools/build/web" }
build-macos = { path = "crates/tools/build/macos" }
run-macos = { path = "crates/tools/run/macos" }
build-terminal = { path = "crates/tools/build/terminal" }
run-terminal = { path = "crates/tools/run/terminal" }
dev-tui = { path = "crates/tools/dev-tui" }
backend-apple-core = { path = "crates/backend/apple/core" }
backend-macos = { path = "crates/backend/macos" }
backend-ios-core = { path = "crates/backend/ios/core" }
backend-ios-mobile = { path = "crates/backend/ios/mobile" }
backend-ios-tv = { path = "crates/backend/ios/tv" }
backend-ios-stack = { path = "crates/backend/ios-stack" }
backend-android-core = { path = "crates/backend/android/core" }
backend-android-mobile = { path = "crates/backend/android/mobile" }
backend-android-tv = { path = "crates/backend/android/tv" }
backend-roku = { path = "crates/backend/roku" }
backend-roku-macros = { path = "crates/backend/roku/macros" }
backend-roku-transpile = { path = "crates/backend/roku/transpile" }
backend-terminal = { path = "crates/backend/terminal" }
backend-cpu = { path = "crates/backend/cpu" }
backend-web = { path = "crates/backend/web" }
backend-ssr = { path = "crates/backend/ssr" }
backend-windows = { path = "crates/backend/windows" }
backend-linux = { path = "crates/backend/linux" }
welcome = { path = "examples/welcome" }
render-api = { path = "crates/gpu-backend/api" }
render-wgpu = { path = "crates/gpu-backend/engine" }
ios-sim = { path = "crates/gpu-backend/painter/ios-sim" }
android-sim = { path = "crates/gpu-backend/painter/android-sim" }
host-winit = { path = "crates/gpu-backend/host/winit" }
host-web = { path = "crates/gpu-backend/host/web" }
host-appkit = { path = "crates/gpu-backend/host/appkit" }
host-terminal = { path = "crates/gpu-backend/host/terminal" }
host-wgpu-accesskit = { path = "crates/gpu-backend/host/wgpu-accesskit" }
variant-phone = { path = "crates/gpu-backend/variant/phone" }
variant-tablet = { path = "crates/gpu-backend/variant/tablet" }
variant-tv = { path = "crates/gpu-backend/variant/tv" }
runtime-server-shell-native = { path = "crates/dev/runtime-server-shell" }
posix-log-capture = { path = "crates/backend/posix-log-capture" }
idea-theme = { path = "crates/ui/idea-theme" }
idea-ui = { path = "crates/ui/idea-ui" }
idea-ui-docs-derive = { path = "crates/ui/idea-ui-docs-derive" }
icons-lucide = { path = "crates/ui/icons-lucide" }
maps-core = { path = "crates/sdk/maps-core" }
maps = { path = "crates/sdk/maps" }
maps-web = { path = "crates/sdk/maps-web" }
maps-ios = { path = "crates/sdk/maps-ios" }
idea-codeblock = { path = "crates/sdk/idea-codeblock" }
webview = { path = "crates/sdk/webview" }
video = { path = "crates/sdk/video" }
svg = { path = "crates/sdk/svg" }
toolbar = { path = "crates/sdk/toolbar" }
form = { path = "crates/sdk/form" }
menu = { path = "crates/sdk/menu" }
net = { path = "crates/sdk/net" }
server = { path = "crates/sdk/server" }
server-macros = { path = "crates/sdk/server-macros" }
stack-navigator = { path = "crates/sdk/stack-navigator" }
tab-navigator = { path = "crates/sdk/tab-navigator" }
drawer-navigator = { path = "crates/sdk/drawer-navigator" }
web-navigator-helpers = { path = "crates/sdk/web-navigator-helpers" }
android-navigator-helpers = { path = "crates/sdk/android-navigator-helpers" }
ios-navigator-helpers = { path = "crates/sdk/ios-navigator-helpers" }

# Gzip for the web build's `--gzip` flag (idealyst build --web --gzip).
# Already in the dep graph transitively (reqwest, ureq, etc.) so adding
# it as a direct dep of build-web doesn't widen the workspace.
flate2 = "1"

# Code-splitting toolchain — vendored from DioxusLabs/dioxus into
# `crates/tools/wasm-split/`. The published-crate equivalents
# (`wasm-splitter`, `wasm-split-macro`, `wasm-split-cli`, `wasm-used`)
# fall over on idealyst-shaped wasm — heavy generics, deep trait
# dispatch — so we own the source and patch as bugs surface.
#
# The runtime crate's published name is `wasm-splitter` (because
# Google owns `wasm-split` on crates.io). We keep the alias via
# `package =` so the `#[wasm_split]` macro's emitted `wasm_split::…`
# paths resolve to our vendored copy.
wasm-split = { path = "crates/tools/wasm-split/wasm-split", package = "wasm-splitter" }
wasm-split-macro = { path = "crates/tools/wasm-split/wasm-split-macro" }
wasm-split-cli = { path = "crates/tools/wasm-split/wasm-split-cli" }
wasm-used = { path = "crates/tools/wasm-split/wasm-used" }

# Third-party deps the vendored wasm-split crates need from the
# workspace. Keep these in one place so version bumps land
# atomically across all four.
anyhow = "1"
itertools = "0.13"
walrus = { version = "0.23", features = ["parallel"] }
wasmparser = "0.224"
id-arena = "2"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
async-once-cell = { version = "0.5", features = ["std"] }
base16 = "0.2"
digest = "0.10"
sha2 = "0.10"
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"

# Dev profile: `opt-level = "z"` works around a wasm OOB seen at
# opt-level = 0 (the default). Root cause is likely an UB somewhere
# in the framework — exposed by unoptimized codegen, masked by even
# minimal optimization. Until that's tracked down, keep dev builds
# at "z" so `wasm-pack build --dev` and `idealyst dev --web`
# produce working bundles.
[profile.dev]
opt-level = "z"

# Size-tuned release profile. We optimize for size rather than speed —
# UI workloads aren't CPU-bound, but bytes-over-the-wire matter for the
# WASM target. `format!` and friends are kept; they're too useful.
[profile.release]
opt-level = "z"          # Smallest code (LLVM size-prioritized).
codegen-units = 1        # Maximum cross-module optimization.
lto = true               # Link-time optimization.
panic = "abort"          # Drops unwinding tables (~10-20 KB win).
strip = "symbols"        # Strip symbol info from the final binary.

# Same as release but keeps symbols + DWARF so `twiggy` can attribute
# bytes to specific functions. Build with `--profile release-debug`.
[profile.release-debug]
inherits = "release"
strip = "none"
debug = 1
